Fix message content word wrap to be forced

--- a/client/src/styles/Chat.css
+++ b/client/src/styles/Chat.css
@@ -23,4 +23,5 @@
 
 .Message p {
     margin: 0;
+    word-wrap: break-word;
 }
